# a6-handout

./: a6.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: a6-1.0.0.0-inplace.conf  package.cache
src/APL/: AST.hs  Check.hs  Parser.hs  Tests.hs
