cabal-version:      3.0
name:               a6
version:            1.0.0.0
build-type:         Simple

common common
    default-language: Haskell2010
    ghc-options: -Wall -Wno-orphans

library
    import: common
    hs-source-dirs: src
    build-depends:
        base
      , megaparsec
      , QuickCheck
    exposed-modules:
        APL.AST
        APL.Parser
        APL.Error
        APL.Eval
        APL.Check
        APL.Tests

executable apl
    import: common
    main-is: apl.hs
    build-depends:
        base
      , a6

test-suite a6-test
    import: common
    type: exitcode-stdio-1.0
    main-is: runtests.hs
    build-depends:
        base
      , tasty
      , tasty-quickcheck
      , a6

